<resources>
    <string name="app_name">Order Pizza</string>
    <string name="name">Non Veg Pizza</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="cart_btn_txt">View Cart</string>
    <string name="add_btn_txt">Select</string>
    <string name="txt1">Select Crust</string>
    <string name="crust1">Hand-tossed</string>
    <string name="crust2">Cheese Burst</string>
    <string name="txt2">Select Size</string>
    <string name="size1">Regular ₹235</string>
    <string name="size2">Medium ₹265</string>
    <string name="size3">Large ₹295</string>
    <string name="price">265</string>
    <string name="amount">Price</string>
    <string name="inr">₹</string>
    <string name="add_to_cart">Done</string>
    <string name="cancel">Cancel</string>
    <string name="cart">Your Cart</string>
    <string name="total_amount">Total Price</string>
    <string name="Pizza_qnt">Quantity</string>
    <string name="pizza_name">Pizza Name</string>
    <string name="total_pizza">Total Pizzas</string>
    <string name="no_pizza">0</string>
    <string name="add_cart_btn_txt">Add to Cart</string>
</resources>
