<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt1"
            android:textSize="30sp"
            android:textStyle="bold"

            />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/crust_radio_group"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/crust1_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crust1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:checked="true"

            />
        <RadioButton
            android:id="@+id/crust2_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crust2"
            android:textSize="20sp"
            android:textStyle="bold"

            />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt2"
            android:textSize="30sp"
            android:textStyle="bold"

            />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/size_radio_group"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/size1_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size1"
            android:textSize="20sp"
            android:textStyle="bold"

            />


        <RadioButton
            android:id="@+id/size2_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:checked="true"
            />
        <RadioButton
            android:id="@+id/size3_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size3"
            android:textSize="20sp"
            android:textStyle="bold"
            />


    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="right"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="40sp"
            android:textStyle="bold"
              android:textColor="@color/red"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inr"
            android:layout_marginRight="10dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_marginRight="30dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="right"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_button"
            android:elevation="40dp"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/done_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_button_2"
            android:elevation="40dp"
            android:text="@string/add_to_cart"
            android:textSize="20sp"
            android:textStyle="bold"
            />


    </LinearLayout>




</LinearLayout>