<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark"
    tools:context=".Activity.CartActivity">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="left"
        >
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/cart"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/red"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/cart"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        >
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Pizza_qnt"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pizza_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />


    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="200dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="left"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginRight="15dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_pizza"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/red"
            />

        <TextView
            android:id="@+id/tv_total_pizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_pizza"
            android:layout_marginRight="20dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="right"
        android:orientation="horizontal"
        android:layout_marginBottom="35dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_amount"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/red"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inr"
            android:layout_marginRight="10dp"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />
        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_marginRight="20dp"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />
    </LinearLayout>

</LinearLayout>



</LinearLayout>