<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/pizza"
    tools:context=".Activity.MainActivity">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="left"
        >
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/red"
            />
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:src="@drawable/non_veg"
           />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:gravity="bottom"
        >

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginBottom="60dp"
           android:orientation="horizontal"
           android:gravity="right"
           >
           <Button
               android:id="@+id/add_btn"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginRight="40dp"
               android:text="@string/add_btn_txt"
               android:textSize="27sp"
               android:textColor="@color/white"
               android:textStyle="bold"
               android:background="@drawable/rounded_button"

               />

       </LinearLayout>

        <Button
            android:id="@+id/btn_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/green"
            android:text="@string/cart_btn_txt"
            android:textSize="25sp"
            android:textStyle="bold"
            />

    </LinearLayout>


</LinearLayout>